# OEcon

./: .gitignore  LICENSE  README.md  pyproject.toml
cli/: oe_to_dh.py
openephys_to_dh/: __init__.py  config.py  dh_from_oe_recording.py  events.py  network_event_codes.py  raw.py
src/cli/: dhtree.py  main.py  oe_to_dh.py
src/oecon/: __init__.py  config.py  convert_open_ephys_to_dh5.py  decimation.py  default_mappings.py  events.py  mua.py  raw.py  scaling.py  trialmap.py  version.py
src/openephys_to_dh/: __init__.py  config.py  decimation.py  events.py  oe_to_dh.py  raw.py  trialmap.py
tests/: test_config_saveload.py  test_decimation.py  test_realdata.py  test_remove_repeating_words.py  test_scaling.py  test_trial_message_parsing.py
